--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*{
+    margin: 0;
+    box-sizing: border-box;
+    padding: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App{
+    max-width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+  .card{
+    max-width: 300px;
+    padding: 10px;
+    font-size: 7px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 3);
+    background-color: #FFFFFF;
   }
-}
+  .button-container{
+    display: flex;
+    justify-content: flex-end;
+  }
+  button{
+    font-size: 20px;
+    width: 25px;
+    height:25px;
+    border-radius: 50%;
+    border: none;
+    color: #FFFFFF;
+    margin-left: auto;
+    box-shadow: 3px 3px 8px 0 #000;
+    transition: box-shadow 0.3s ease
+  }
+  button:active{
+    box-shadow: 1px 1px 8px 0 #000;
+    transition: box-shadow 0.3s ease;
+  }
+  .headCard{
+    display: flex;
+  }
+  .headCard i{
+    font-size: 20px;
+  }
+  .phrases{
+    margin-bottom: 20px;
+  }
+  .nameAuthor{
+    text-align: right;
+  }
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+  @media screen and (min-width: 680px) {
+    .card{
+      max-width: 500px;
+      padding: 30px;
+      font-size: 15px;
+      box-shadow: 1px 1px 5px rgba(0, 0, 0, 3);
+      background-color: #FFFFFF;
+    }
+    button{
+      cursor: pointer;
+      width: 50px;
+      height: 50px;
+      font-size: 40px;
+    }
+    .headCard i{
+      font-size: 70px;
+    }
+  }
